[package]
name = "mentor"
version = "0.0.0"
description = "A specialized CLI that helps our GitHub Actions handle heavy tasks with a single command."
authors = ["LiterateInk <contact@literate.ink>"]
repository = "https://github.com/LiterateInk/Mentor"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
cargo_toml = "0.21.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.2.0"
regex = "1.11.1"
